--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="X-UA-Compatible" content="ie=edge">
  <!-- bootstrap css -->
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" crossorigin="anonymous">
-
  <!-- main css -->
  <link rel="stylesheet" href="css/main.css">
  <!-- google fonts -->
  <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
-
  <!-- font awesome -->
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.css">
  <title>Expense Tracker</title>
  <style>
  </style>
 </head>
-
 <body>
  <div class="container-fluid">
   <div class="row">
@@ -34,7 +30,7 @@
       <form id="budget-form" class=" budget-form">
        <h5 class="text-capitalize">please enter your budget</h5>
        <div class="form-group">
-        <input type="number" class="form-control budget-input" id="budget-input">
+        <input type="number" class="form-control budget-input" id="budget-input" min="0">
        </div>
        <!-- submit button -->
        <button type="submit" class="btn text-capitalize budget-submit" id="budget-submit">calculate</button>
@@ -74,7 +70,7 @@
        </div>
        <h5 class="text-capitalize">please enter expense amount</h5>
        <div class="form-group">
-        <input type="number" class="form-control expense-input" id="amount-input">
+        <input type="number" class="form-control expense-input" id="amount-input" min="0">
        </div>
        <!-- submit button -->
        <button type="submit" class="btn text-capitalize expense-submit" id="expense-submit">add expense</button>
@@ -89,33 +85,9 @@
         <h5 class="list-item">expense value</h5>
         <h5 class="list-item"></h5>
        </div>
-       <!-- single expense -->
-
-       <!-- <div class="expense">
-        <div class="expense-item d-flex justify-content-between align-items-baseline">
-
-         <h6 class="expense-title mb-0 text-uppercase list-item">- title</h6>
-         <h5 class="expense-amount mb-0 list-item">amount</h5>
-
-         <div class="expense-icons list-item">
-
-          <a href="#" class="edit-icon mx-2" data-id="₹{expense.id}">
-           <i class="fas fa-edit"></i>
-          </a>
-          <a href="#" class="delete-icon" data-id="₹{expense.id}">
-           <i class="fas fa-trash"></i>
-          </a>
-         </div>
-        </div>
-
-       </div> -->
-
-       <!-- end of single expense -->
-
       </div>
      </div>
     </div>
-
    </div>
   </div>
  </div>
@@ -123,7 +95,6 @@
  <!-- jquery & bootstrap -->
  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" ></script>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" ></script>
- 
  <!-- script js -->
  <script src="js/app.js"></script>
 </body>
